# ml-hpx

./: .gitignore  CMakeLists.txt  README.md  linear_reg.cpp  log_reg.cpp  log_reg.py  pyproject.toml  test-linear-reg.py
bench/: linear_reg.cpp  log_reg.cpp
cmake/: FindHwloc.cmake  HPXSetup.cmake
datasets/: classified_points_dataset.csv  kmeans_test_dataset.csv  linear_regressor_dataset_10000.csv  logistic_regression_dataset_10000.csv  multi-feature-linear-regression.csv  multi-feature-log-regression.csv  perceptron_test_dataset.csv  svc_test_dataset.csv
include/: Activation.hpp  KMeansClustering.hpp  KNearestNeighbours.hpp  Layer.hpp  LinearRegression.hpp  LogisticRegression.hpp  NeuralNetwork.hpp  Optimizer.hpp  Perceptron.hpp  SVC.hpp
python_tests/: kmeans.py  knn.py  lin_reg.py  log_reg.py  nn.py  nn_2.py  perceptron.py  svc.py
src/: KMeansClustering.cpp  KNearestNeighbours.cpp  Layer.cpp  LinearRegression.cpp  LogisticRegression.cpp  NeuralNetwork.cpp  Perceptron.cpp  SVC.cpp  bind.cpp
src/ml_hpx/: __init__.py
test/: linear_reg_test.cpp  log_reg_test.cpp
